tests/base/invalid/List_CompileFail_5.whiley
import whiley.lang.*:*

[int] f():
    return 1
